container overflow fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -23,7 +23,7 @@ strong {
 }
 
 .container {
-  overflow-x: hidden;
+  overflow: hidden;
   margin: 0 auto;
   padding: 0 30px;
   max-width: 1400px;
@@ -31,7 +31,7 @@ strong {
 }
 
 .container-small {
-  overflow-x: hidden;
+  overflow: hidden;
   margin: 0 auto;
   padding: 0 30px;
   max-width: 1160px;
@@ -39,7 +39,7 @@ strong {
 }
 
 .container-supersmall {
-  overflow-x: hidden;
+  overflow: hidden;
   margin: 0 auto;
   padding: 0 30px;
   max-width: 1000px;
